--- a/site/pages/home/index.scss
+++ b/site/pages/home/index.scss
@@ -5,7 +5,7 @@
   position: relative;
   .doc-left {
     position: absolute;
-    // background: lightgreen;
+    background: #304156;
     width: 200px;
     overflow: auto;
     height: 100%;
@@ -22,7 +22,7 @@
       a {
         text-decoration: none;
         font-size: 14px;
-        color: #444;
+        color: #eee;
         width: 100%;
         display: inline-block;
       }
